fixed spacing

--- a/css/my_styles.css
+++ b/css/my_styles.css
@@ -136,13 +136,14 @@ div.content{
 	/* flex:2; */
 	display: flex;
 	flex-direction:column;
-	margin: 20px;
+	margin-top: 20px;
 	width: 80%;
 	max-width: 500px;
 	min-height: 350px;
 	justify-content: center;
 	align-items:center;
 	/* padding:10px; */
+	/* align-self: center; */
 }
 div.sample{
 	background-color: rgba(0, 0, 0, 0.6);
@@ -171,8 +172,8 @@ div.contentbox{
 	flex-direction:row;
 	flex-wrap:wrap;
 	/* align-items: center; */
-	justify-content: center;
-	width: 100%;
+	justify-content: space-around;
+	width: 85%;
 }
 img.melogo{
 	width: 200%;
